Rev. 3.1.4: Korrekturen im Diskussionsteil bis zur Plausibilitätskontrolle.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -45,18 +45,19 @@ Mit 64~\% wurde der Großteil aller Plots zur Bestimmung der VT1 als kritisch be
 %
 \subsection{Kriterien für die optische Bewertung der Plots}
 %
-Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut auswerten zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. Wenn beim V-Slope einem X-Wert mehrere Y-Werte entsprachen, wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.\\
+Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut auswerten zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. Wenn beim V-Slope mehrere Y-Werte einem X-Wert entsprachen, wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.
+\clearpage
 Bei guten \gls{EQO2}-Kurven wurde für die VT1-Bestimmung erwartet, dass sie einen eindeutig zu detektierenden Tiefpunkt besaßen, auf den eine von dort an stetige Zunahme folgte. Wenn die Kurven jedoch Schwankungen innehatten oder aber mehrere, optisch auf relativ gleicher Höhe liegende Tiefpunkte aufwiesen, waren sie kritisch.\\
 Ähnliches galt für die VT2-Bestimmung mittels \gls{EQCO2}. Gut waren die Graphen, die eine annähernd Badewannen-ähnliche Form besaßen, sodass im fortgeschrittenen Messverlauf ein deutlich sichtbarer Anstieg zu erkennen war. Es wurden bei den Tests jedoch auch Plots generiert, in denen diese Kurven ebenfalls Schwankungen aufwiesen, sodass mehrere, potentiell als VT2 assoziierbare \gls{EQCO2}-Steigungen existierten. Diese Grafiken galten als kritisch.\\
 Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein und durften keine zackigen Verläufe annehmen. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
 %
 \section{Evaluierung der Methoden zur Schwellenbestimmung}
 %
-Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Nach einem erneuten Durchlauf des MATLAB-Programms konnte das Problem mit den meisten undifferenzierbaren Graphen behoben werden. Es sollten dementsprechend zukünftig neue Testmessungen bzw. eine erneute Auswertung der neu generierten Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
+Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Nach einem erneuten Durchlauf des MATLAB-Programms konnte das Problem mit den meisten undifferenzierbaren Graphen behoben werden. Es sollten dementsprechend zukünftig neue Testmessungen bzw. eine erneute Auswertung der neuen Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
 %
 \subsection{\gls{EQCO2} als optimale Methode}
 %
-75~\% der mit der ersten Algorithmus-Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Die Ergebnisse dieser Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe. Abb. \ref{pic:pic26}). Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto mehr korrelieren die Schwellenbestimmungen und desto eindeutiger ist die Methode zur Schwellenbestimmung anwendbar. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert eins und im Vergleich mit den anderen Methoden am besten.
+75~\% der mit der ersten Algorithmus-Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Diese Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe. Abb. \ref{pic:pic26}). Die anderen Streudiagramme für die übrigen Methoden in Abb. \ref{pic:pic23}, \ref{pic:pic24} und \ref{pic:pic27} besitzen dieselbe Skalierung, sodass in Abb. \ref{pic:pic26} deutlich die geringsten Differenzen erkennbar sind. Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto höher ist die Korrelation und desto eindeutiger ist die Methode. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert eins und im Vergleich mit den anderen Methoden am besten.
 %
 \begin{figure}[H]
 	\centering
@@ -66,48 +67,48 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\label{pic:pic28}
 \end{figure}
 %
-Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die hohe Korrelation mit dem Bestimmtheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch. Dieses Maß liegt stets zwischen null und eins und gibt als relative Größe den Zusammenhang zwischen den Ergebnissen an. Bei $R^2 = 1$ bestünde ein perfekter linearer Zusammenhang. Mit $R^2 = 0,83$ geht der Ist-Wert mehr in Richtung eins und ist deshalb akzeptabel.\\
+Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die Korrelation mit dem Bestimmtheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch. Dieses Maß liegt stets zwischen null und eins und gibt als relative Größe den Zusammenhang zwischen den Ergebnissen an. Bei $R^2 = 1$ bestünde ein perfekter linearer Zusammenhang. Mit $R^2 = 0,83$ geht der Ist-Wert eher gegen eins und ist deshalb akzeptabel.\\
 Einen guten Plot stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
-Eine solch geringe Differenz wirkt sich auf die Trainingszonenbestimmung wenig aus, was anhand eines Beispiels mit Proband 11m gezeigt wird. Rater 1 bestimmte die VT2 bei \SI{149}{\per\minute}, Rater 2 bei \SI{160}{\per\minute} und die Software bei \SI{162}{\per\minute}. Mit dem neuen Modell werden die Trainingszonen in Abhängigkeit von VT2, wie in Tab. \ref{tab:tabelle9} folgt, definiert. 
+Die Differenz der Schwellenergebnisse entspricht in etwa auch der zwischen den damit bestimmten Trainingszonen mit dem angepassten Modell nach Wilfried Kindermann, was anhand eines Beispiels mit Proband 11m gezeigt wird. Rater 1 bestimmte die VT2 bei \SI{149}{\per\minute}, Rater 2 bei \SI{160}{\per\minute} und die Software bei \SI{162}{\per\minute}. Die Trainingszonen werden in Abhängigkeit von der VT2, wie in Tab. \ref{tab:tabelle9} folgt, definiert. 
 %
 \begin{table}[H]
 	\begin{center}
-		\caption{Angepasstes Trainingszonenmodell nach Wilfried Kindermann}
+		\caption{cardioscans angepasstes Trainingszonenmodell nach Wilfried Kindermann, angewandt auf Proband 11m mit zwei unterschiedlichen VT2-Ergebnissen der Rater 1 und 2}
 		\medskip
-		\begin{tabulary}{\textwidth}{L L}
+		\begin{tabulary}{\textwidth}{L L L L}
 			\toprule
-			Trainingszone & Herzfrequenzbereich \\
+			Trainingszone & Herzfrequenzbereich & für Rater 1 in \si{\per\minute} & für Rater 2 in \si{\per\minute} \\
 			\midrule
 			\midrule
-			\gls{REKOM} & <70 \% VT2 \\
-			\gls{GA1} & 70-90 \% VT2 \\
-			\gls{GA2} & 90-95 \% VT2 \\
-			\gls{EW} & 95-105 \% VT2 \\
-			Leistung & >105 \% VT2 \\
+			\gls{REKOM} & <70 \% VT2 & <104,3 & <112 \\
+			\gls{GA1} & 70-90 \% VT2 & 104,3-134,1 & 112-144 \\
+			\gls{GA2} & 90-95 \% VT2 & 134,1-141,55 & 144-152 \\
+			\gls{EW} & 95-105 \% VT2 & 141,55-156,45 & 152-168 \\
+			Leistung & >105 \% VT2 & >156,45 & >168 \\
 			\bottomrule
 		\end{tabulary}
 		\label{tab:tabelle9}
 	\end{center}
 \end{table}
 %
-
-In Abb. \ref{pic:pic17} für Probandin 6w ist allerdings ein eindeutiger Anstieg des \gls{EQCO2} zu sehen, obwohl Abb. \ref{subpic:pic3} entnommen werden kann, dass zwischen Rater 1 und Rater 2 sowie der Software eine relativ große Differenz bei der Schwellenbestimmung existiert. Rater 1 detektierte die VT2 eine Stufe früher, wo in Abb. \ref{pic:pic17} bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 eventuell noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Die Mittelung der Werte je Stufe könnte hier zu einem leichten Anstieg zwischen zwei Messpunkten führen, der noch nicht auf das Exzess-\gls{CO2} zurückzuführen ist. Die Oxygen Delay Time $\tau$ zwischen Steigerung der Leistung zu Beginn einer neuen Stufe und der respiratorischen Reaktion beträgt bei kleinen Inkrementen ca. \SI{45}{\second}~\cite{Kroidl.2015}. Bei einer Stufendauer von \SI{2}{\minute} ist somit annehmbar, dass die physiologische Reaktion auf die Leistungssteigerung zu Beginn der Respirationsmessung nach \SI{90}{\second} bereits eingetreten ist und der Anstieg des \gls{EQCO2} könnte auf das Exzess-\gls{CO2} zurückzuführen sein. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6~\%. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
-Es gab wenige kritische \gls{EQCO2}-Kurven, in denen wechselnde Schwankungen zwischen positiver und negativer Steigung auftraten, sodass bei der optischen Auswertung die entscheidende \gls{EQCO2}-Zunahme nicht einfach erkennbar war. Dies ist beispielsweise bei Proband 8m in Abb. \ref{pic:pic18} der Fall. Die Kurve steigt im letzten Drittel des Plots zweimal an und fällt dazwischen einmal. Infolgedessen kam es zu unterschiedlichen Bestimmungen der VT2 durch die Rater, wie Abb. \ref{subpic:pic3} zeigt.
+Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entsprechend der zwei VT2-Ergebnisse ebenfalls um ca. \SI{11}{\per\minute} voneinander abweichen. In den Trainingszonen mit relativ großen Intervallen (\gls{REKOM}, \gls{GA1} und \gls{GA2}) dürfte sich diese Differenz in der Praxis weniger signifikant auf den Trainingserfolg auswirken, da die \gls{HF} schwierig innerhalb eines kleinen Intervalls zu halten ist. Im Leistungsbereich ist die Differenz kritisch, da das Training innerhalb des Bereichs nach Rater 1 z.B. als Teil einer Wettkampfvorbereitung zu ineffektiv wäre, falls die VT2 zu niedrig bestimmt wurde.\\
+Für Probandin 6w entstand eine ähnliche Differenz der Ergebnisse, obwohl dort ein eindeutiger Anstieg des \gls{EQCO2} zu sehen ist (siehe Abb. \ref{pic:pic17}). Rater 1 detektierte die VT2 eine Stufe früher, wo bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 scheinbar noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
+Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater 1 83,7~\%~\gls{HFmax} und nach Rater 2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater 1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch hier, dass die VT2 nach Rater 2 und Software näher am Realitätszustand der Person liegt.
 %
 \subsection{\gls{VE}/\gls{VCO2} als geeignete Referenzmethode}
 %
-Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} und die \gls{SD} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m. In der ersten Hälfte der Messung sind zwar einige sehr dicht gelegene Messpunkte zu erkennen, doch in der zweiten Hälfte, in der die VT2 angenommen werden kann, ist die Zunahme der \gls{VCO2} deutlich zu sehen. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
+Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute}$\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da nicht differenzierbar. Bei dieser Methode wirkten diese Artefakte sich allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
-Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die erneut den Vorteil der mathematischen Detektion der Steigung innehat.\\
-Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen. Gegebenenfalls kann diese Methode künftig als Referenzmethode für die VT2-Bestimmung in die Software integriert werden.
+Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die den Vorteil der mathematisch genauen Detektion der Steigungsänderung innehat.\\
+Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen.
 %
 \subsection{Problematik bei der Bestimmung der VT1}
 %
 \subsubsection{V-Slope-Methode}
 %
-Wenn die V-Slopes und die zugeordneten \gls{HF}-Kurven nicht differenzierbar waren, wie beispielsweise ist den Plots in Abb. \ref{pic:pic18} und Abb. \ref{pic:pic21} erkennbar ist, war die subjektive Bestimmung der VT1 erschwert und die Grafik kritisch. Diese Problematik trat relativ häufig auf und wurde auch vom 2.~Rater moniert. Es lagen jedoch auch Grafiken vor, bei denen die Plots zwar differenzierbar waren, aber dennoch mehrere Schwankungen aufwiesen.\\
-Ein Beispiel hierfür ist die Grafik von Proband 8m. In Abb. \ref{pic:pic18} ist ein nicht differenzierbarer V-Slope zu sehen, der mehrere Knickpunkte enthält. Eine Vielzahl an solchen Punkten begünstigt eine große Varianz an Werten für die VT1. Während Rater~1 den ersten Anstieg in der 2. Stufe bei \SI{120}{\per\minute} beobachtete, wurde er laut Rater~2 erst nach den Schwankungen der Werte in Stufe 6 bei \SI{155}{\per\minute} erkennbar. Die kritische Bewertung des Plots wird dadurch belegt. Abb. \ref{subpic:pic1} zeigt hierzu, dass Rater~1 und Rater~2 häufiger, wie bei Proband 8m, zu unterschiedlichen Ergebnissen kamen.\\
-Auch differenzierbare und stetig steigende V-Slopes, die jedoch viele Messpunkte besaßen und dadurch stärker geglättet wurden, brachten ungleiche Ergebnisse durch Rater und Software hervor. Für Proband 9m bestimmte Rater~1 die VT1 früher als Rater~2 und die Software. Bei Betrachtung von Abb. \ref{pic:pic19} fällt auf, dass die Kurvenverläufe allgemein recht eben sind. Hier wird ein Vorteil der algorithmischen Auswertung deutlich, da die Software die größte Steigungsänderung mathematisch und daher eindeutig bestimmt. Allerdings erkennt sie Software keine eventuellen Ausreißer und kann den Trainingszustand einer Person nicht bewerten, der die Rater dazu veranlassen konnte, die VT1 im späteren Messverlauf zu vermuten.\\
+Wenn die V-Slopes und die zugeordneten \gls{HF}-Kurven nicht differenzierbar waren, wie beispielsweise in den Plots in Abb. \ref{pic:pic18} und Abb. \ref{pic:pic21} erkennbar ist, war die subjektive Bestimmung der VT1 erschwert und die Grafik kritisch. Diese Problematik trat relativ häufig auf und wurde auch vom 2.~Rater moniert. Es lagen jedoch auch Grafiken vor, bei denen die Plots zwar differenzierbar waren, aber dennoch mehrere Schwankungen aufwiesen.\\
+Ein Beispiel hierfür ist die Grafik von Proband 8m. In Abb. \ref{pic:pic18} ist ein nicht differenzierbarer V-Slope zu sehen, der mehrere Knickpunkte enthält. Eine Vielzahl an solchen Punkten begünstigt eine große Varianz an Werten für die VT1. Während Rater~1 den ersten Anstieg in der 2. Stufe bei \SI{120}{\per\minute} beobachtete, wurde er laut Rater~2 erst nach den Schwankungen der Werte in Stufe 6 bei \SI{155}{\per\minute} erkennbar. Abb. \ref{subpic:pic1} zeigt, dass Rater~1 und Rater~2 häufiger zu solch unterschiedlichen Ergebnissen kamen.\\
+Auch differenzierbare und stetig steigende V-Slopes, die jedoch viele Messpunkte besaßen und dadurch stärker geglättet wurden, brachten ungleiche Ergebnisse durch Rater und Software hervor. Für Proband 9m bestimmte Rater~1 die VT1 früher als Rater~2 und die Software. Bei Betrachtung von Abb. \ref{pic:pic19} fällt auf, dass die Kurvenverläufe allgemein recht eben sind. Hier wird wieder der Vorteil der algorithmischen Auswertung deutlich. Allerdings erkennt sie Software keine eventuellen Ausreißer und kann den Trainingszustand einer Person nicht bewerten, der die Rater dazu veranlassen konnte, die VT1 im späteren Messverlauf zu vermuten.\\
 21 von 28 V-Slope-Grafiken waren aufgrund dieser Gründe kritisch, was durch das Diagramm in Abb. \ref{subpic:pic1} und die darin sichtbaren Abweichungen zwischen den Schwellen belegt werden kann. Es ist durch recht viele hellrote Schraffuren im Diagramm zu erkennen, dass der 2.~Rater die VT1 meistens später bzw. bei höheren \gls{HF} bestimmte. Dadurch, dass die beiden Rater häufig zu ungleichen Ergebnissen kamen, gibt es bei den Mittelwerten oft große Streuungen, sodass die Differenz zwischen Ratern und Software größer wird (siehe Abb. \ref{pic:pic23}). Der Korrelationskoeffizient $r$ liegt bei $0,526$, was als mangelhaft zu werten ist. Die durchschnittliche Differenz zwischen Ratern und Software mit \SI{3,89}{\per\minute} (siehe. Abb. \ref{pic:pic23}) ist zwar recht niedrig, doch da bei einigen Plots sehr hohe Unterschiede zwischen den Ergebnissen auftraten, ist die \gls{SD} mit $\pm$\SI{14}{\per\minute} vergleichsweise hoch.
 %
 \subsubsection{\gls{EQO2}-Methode}
